--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p>
             I am a highly motivated, full-time student pursuing an Associate of Applied Science 
             in Computer Information Systems and a Bachelor of Science in Computer Science. 
-            I have a passion for technology and am focusing on software development. 
+            I have a passion for technology and am focusing on software developments. 
             I expect to graduate with my associate degree from North Central Texas College December 2020.
           </p>
         </div>
