change typing loop

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div>
       <div class="container-fluid banner-area" id="home">
         <h2>Zach Scroggins</h2>
-        <h3>Aspiring <span class="type"></span></h3>
+        <h3><span class="type"></span></h3>
         <a href="#contact" class="btn btn-outline-light">Contact</a>
       </div>
       <script src="/js/typed.js"></script>
@@ -62,6 +62,7 @@
           strings: ["Developer", "Programmer", "Designer"],
           typeSpeed: 60,
           backSpeed: 60,
+          backDelay: 1250,
           loop: true
         });
       </script>
