update copyright  year

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </div>
       <script src="/js/typed.js"></script>
       <script>
-        var typed = new Typed(".type", {
-          strings: ["Developer", "Programmer", "Designer"],
+        var typed = new Typed('.type', {
+          strings: ['Developer', 'Programmer', 'Designer'],
           typeSpeed: 60,
           backSpeed: 60,
           backDelay: 1250,
@@ -315,7 +315,7 @@
       <!-- footer -->
 
       <footer class="container-fluid">
-        <p><strong>&copy; 2019 Zach Scroggins</strong></p>
+        <p><strong>&copy; 2020 Zach Scroggins</strong></p>
       </footer>
     </div>
 
